--- a/application/admin/view/login/login.html
+++ b/application/admin/view/login/login.html
@@ -1,50 +1,60 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"><!--Head--><head>
-    <meta charset="utf-8">
-    <title>享信课堂</title>
-    <meta name="description" content="login page">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <!--Basic Styles-->
-    <link href="__ADMIN__/style/bootstrap.css" rel="stylesheet">
-    <link href="__ADMIN__/style/font-awesome.css" rel="stylesheet">
-    <!--Beyond styles-->
-    <link id="beyond-link" href="__ADMIN__/style/beyond.css" rel="stylesheet">
-    <link href="__ADMIN__/style/demo.css" rel="stylesheet">
-    <link href="__ADMIN__/style/animate.css" rel="stylesheet">
+<html lang="en" class="bg-dark">
+<head>
+    <meta charset="utf-8"/>
+    <title>享信课堂后台管理程序</title>
+    <meta name="description"content="app, web app, responsive, admin dashboard, admin, flat, flat ui, ui kit, off screen nav"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+    <link href="__ADMIN__/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="__ADMIN__/admin.ui/css/animate.css" type="text/css"/>
+    <link rel="stylesheet" href="__ADMIN__/admin.ui/css/app.css" type="text/css"/>
+    <!--[if lt IE 9]>
+    <script src="__ADMIN__/admin.ui/js/ie/html5shiv.js"></script>
+    <script src="__ADMIN__/admin.ui/js/ie/respond.min.js"></script>
+    <script src="__ADMIN__/admin.ui/js/ie/excanvas.js"></script>
+    <![endif]-->
 </head>
-<!--Head Ends-->
-<!--Body-->
-
-<body>
-    <div class="login-container animated fadeInDown">
-        <form action="" method="post">
-            <div class="loginbox bg-white">
-                <div class="loginbox-title">享信课堂后台管理系统</div>
-                <div class="loginbox-textbox">
-                    <input value="" class="form-control" placeholder="username" name="username" type="text">
+<body class="">
+<section id="content" class="m-t-lg wrapper-md animated fadeInUp">
+    <div class="container aside-xxl">
+        <a class="navbar-brand block" href="">享信课堂后台管理程序</a>
+        <section class="panel panel-default bg-white m-t-lg">
+            <header class="panel-heading text-center">
+                <strong>管理员后台登陆</strong>
+            </header>
+            <form method="post" action="{:url('admin/login/post')}" class="panel-body wrapper-lg">
+                <div class="form-group">
+                    <label class="control-label">用户名</label>
+                    <input required type="text" class="form-control input-lg" name="admin_username">
                 </div>
-                <div class="loginbox-textbox">
-                    <input class="form-control" placeholder="password" name="password" type="password">
+                <div class="form-group">
+                    <label class="control-label">密 码</label>
+                    <input required type="password"  class="form-control input-lg" name="admin_password">
                 </div>
-                <div class="loginbox-submit">
-                    <input class="btn btn-primary btn-block" value="登陆" type="submit">
+                <div class="form-group">
+                    <label class="control-label">验证码</label>
+                    <input type="text"  class="form-control input-lg col-md-6" name="code">
+                    <img id="captcha" src="{:captcha_src()}" onclick="this.src=this.src+'&'+Math.random()">
                 </div>
-            </div>
-                <div class="logobox">
-                    <p class="text-center">&copy 2018 享信科技有限公司</p>
-                </div>
-        </form>
+                <button type="submit" class="btn btn-primary">登陆后台</button>
+            </form>
+        </section>
     </div>
-    <!--Basic Scripts-->
-    <script src="__ADMIN__/style/jquery.js"></script>
-    <script src="__ADMIN__/style/bootstrap.js"></script>
-    <script src="__ADMIN__/style/jquery_002.js"></script>
-    <!--Beyond Scripts-->
-    <script src="__ADMIN__/style/beyond.js"></script>
-
-
-
-
-</body><!--Body Ends--></html>
+</section>
+<!-- footer -->
+<footer id="footer">
+    <div class="text-center padder">
+        <p>
+            <small>Powered By x2class.com<br> copyright &copy; 2018</small>
+        </p>
+    </div>
+</footer>
+<script src="__ADMIN__/admin.ui/js/jquery.min.js"></script>
+<!-- Bootstrap -->
+<script src="__ADMIN__/admin.ui/js/bootstrap.js"></script>
+<!-- App -->
+<script src="__ADMIN__/admin.ui/js/app.js"></script>
+<script src="__ADMIN__/admin.ui/js/slimscroll/jquery.slimscroll.min.js"></script>
+<script src="__ADMIN__/admin.ui/js/app.plugin.js"></script>
+</body>
+</html>
