--- a/application/admin/view/common/best.html
+++ b/application/admin/view/common/best.html
@@ -57,13 +57,13 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
                             <i class="fa fa-w fa-user"></i>
-                            {:session('admin_username')}
+                            {:session('username')}
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="changePass.html">修改密码</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="{:url('clear')}">退出</a></li>
+                            <li><a href="{:url('admin/index/clear')}">退出</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -93,23 +93,28 @@
     <div class="row">
         <div class="col-xs-12 col-sm-3 col-lg-2 left-menu">
             <div class="panel panel-default" id="menus">
-                <!--学员管理菜单-->
+                <!--管理员菜单-->
                 <div class="panel-heading" role="button" data-toggle="collapse" href="#collapseExample"
                      aria-expanded="false" aria-controls="collapseExample"
                      style="border-top: 1px solid #ddd;border-radius: 0%">
-                    <h4 class="panel-title">学员管理菜单</h4>
+                    <h4 class="panel-title">管理员菜单</h4>
                     <a class="panel-collapse" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
                         <i class="fa fa-chevron-circle-down"></i>
                     </a>
                 </div>
                 <ul class="list-group menus collapse in" id="collapseExample">
-                    <a href="" class="list-group-item">
-                        <i class="fa fa-male" aria-hidden="true"></i>
+                    <a href="{:url('admin/admin/lst')}" class="list-group-item">
+                        <i class="fa fa-users" aria-hidden="true"></i>
                         <span class="pull-right" href=""></span>
-                        学员管理
+                        管理员列表
+                    </a>
+                    <a href="{:url('admin/admin/addadmin')}" class="list-group-item">
+                        <i class="fa fa-user-plus" aria-hidden="true"></i>
+                        <span class="pull-right" href=""></span>
+                        添加管理员
                     </a>
                 </ul>
-                <!--学员管理菜单 end-->
+                <!--管理员菜单 end-->
 
                 <!--课程管理菜单-->
                 <div class="panel-heading" role="button" data-toggle="collapse" href="#collapseExample2"
