--- a/application/admin/view/login/login.html
+++ b/application/admin/view/login/login.html
@@ -25,16 +25,16 @@
             <form method="post" action="{:url('admin/login/post')}" class="panel-body wrapper-lg">
                 <div class="form-group">
                     <label class="control-label">用户名</label>
-                    <input required type="text" class="form-control input-lg" name="admin_username">
+                    <input required type="text" class="form-control input-lg" name="username">
                 </div>
                 <div class="form-group">
                     <label class="control-label">密 码</label>
-                    <input required type="password"  class="form-control input-lg" name="admin_password">
+                    <input required type="password"  class="form-control input-lg" name="password">
                 </div>
                 <div class="form-group">
-                    <label class="control-label">验证码</label>
-                    <input type="text"  class="form-control input-lg col-md-6" name="code">
-                    <img id="captcha" src="{:captcha_src()}" onclick="this.src=this.src+'&'+Math.random()">
+                    <label style="line-height: 50px" class="control-label">验证码</label>
+                    <input style="width: 180px;overflow:hidden;float: right;" type="text" class="form-control input-lg col-md-6" name="code">
+                    <img style="padding: 0 5px 5px 0;float: right;" id="captcha" src="{:captcha_src()}" onclick="this.src=this.src+'&'+Math.random()">
                 </div>
                 <button type="submit" class="btn btn-primary">登陆后台</button>
             </form>
