享信课堂程序，用于职场培训课程 thinkphp5。1 php 7.0版本

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>无标题文档</title>
+<title>享信课堂 - 只为职场，保驾护航</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
 <script type="text/javascript" src="__INDEX__/js/jquery.js"></script>
 <link rel="stylesheet" type="text/css" href="__INDEX__/bootstrap/css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="__INDEX__/css/muke.css">
