--- a/application/admin/view/common/best.html
+++ b/application/admin/view/common/best.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>享信课堂网后台管理系统</title>
+    <meta name=""
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="__ADMIN__/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="__ADMIN__/css/site.css" rel="stylesheet">
@@ -116,27 +117,27 @@
                 </ul>
                 <!--管理员菜单 end-->
 
-                <!--课程管理菜单-->
+                <!--栏目管理菜单-->
                 <div class="panel-heading" role="button" data-toggle="collapse" href="#collapseExample2"
                      aria-expanded="false" aria-controls="collapseExample">
-                    <h4 class="panel-title">课程管理菜单</h4>
+                    <h4 class="panel-title">栏目管理菜单</h4>
                     <a class="panel-collapse" data-toggle="collapse" href="#collapseExample2" aria-expanded="true">
                         <i class="fa fa-chevron-circle-down"></i>
                     </a>
                 </div>
                 <ul class="list-group menus collapse in" id="collapseExample2">
-                    <a href="" class="list-group-item">
-                        <i class="fa fa-list-ol" aria-hidden="true"></i>
+                    <a href="{:url('admin/cate/lst')}" class="list-group-item">
+                        <i class="fa fa-list-alt" aria-hidden="true"></i>
                         <span class="pull-right" href=""></span>
-                        阶段课程
+                        栏目列表
                     </a>
-                    <a href="" class="list-group-item">
+                    <a href="{:url('admin/cate/add')}" class="list-group-item">
                         <i class="fa fa-list-ul" aria-hidden="true"></i>
                         <span class="pull-right" href=""></span>
-                        碎片课程
+                        添加栏目
                     </a>
                 </ul>
-                <!--课程管理菜单 end-->
+                <!--栏目管理菜单 end-->
 
                 <!--网站配置管理菜单-->
                 <div class="panel-heading" role="button" data-toggle="collapse" href="#collapseExample3"
