--- a/application/admin/view/common/best.html
+++ b/application/admin/view/common/best.html
@@ -162,6 +162,16 @@
     </div>
     <!--右侧主体区域部分结束 end-->
 </div>
+<script>
+    function del() {
+        if(confirm("确定要删除吗？"))
+        {
+            return true;
+        }else {
+            return false;
+        }
+    }
+</script>
 </div>
 <div class="master-footer" style="margin-top: 150px">
     <a href="http://www.x2class.com">享信课堂</a>
