享信课堂程序，用于职场培训课程 thinkphp5。1 php 7.0版本

--- a/application/admin/view/cate/add.html
+++ b/application/admin/view/cate/add.html
@@ -58,7 +58,7 @@
                         <select class="js-example-basic-single form-control" name="pid">
                             <option value="0">顶级栏目</option>
                             {volist name="lst" id="v"}
-                            <option value="{$v.id}">{$v.catename}</option>
+                            <option value="{$v.id}">{if($v.level != 0)}|{/if}<?php echo str_repeat('-',$v['level']*8) ?>{$v.catename}</option>
                             {/volist}
                         </select>
                     </div>
